fix bio image and add gallery link at the bottom on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -330,8 +330,18 @@ a:focus {
 
 /* Media queries */
 
+/* mobile */
+
 @media (max-width: 768px) {
   .tags {
+    display: none;
+  }
+}
+
+/* larger than mobile */
+
+@media (min-width: 768px) {
+  .gallery-link {
     display: none;
   }
 }
